# picoterpreter

./: CMakeLists.txt  build.ps1  compile_commands.json  run.ps1  test.s
src/: main.cpp  shared.hpp
src/cli/: cli.cpp  cli.hpp
src/parse/: diagnostics.cpp  diagnostics.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/utilities/: byte_arena.hpp  formatting.hpp  forward_hash.hpp  inline_vector.hpp
